Formation/Tp_CICD/game-dpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-dpl
spec:
  replicas: 3
  selector:
    matchLabels: 
      app: game
  template:
    metadata:
      name: game-pod
      labels:
        app: game
    spec:
      containers:
        - name: game
          image: kevin31300/app_game_python:v1


---

apiVersion: v1
kind: Service
metadata:
  name: game-srv-test
spec: 
  type: NodePort
  selector:
    app: game
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30007
      
---

apiVersion: v1
kind: Service
metadata:
  name: game-srv-dev
spec: 
  type: NodePort
  selector:
    app: game
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30008
      
---

apiVersion: v1
kind: Service
metadata:
  name: game-srv-prod
spec: 
  type: NodePort
  selector:
    app: game
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30009
